faq collapsing fix;faq margin del;prepping bucket;

--- a/src/app/docs/docs.component.scss
+++ b/src/app/docs/docs.component.scss
@@ -82,7 +82,7 @@
     margin-bottom: 20px;
     font-weight: 600;
   }
-  
+
   .docs--faq {
     .faq-title-wrapper {
       margin-bottom: 30px;
@@ -105,28 +105,34 @@
         letter-spacing: 0.85px;
         z-index: -1;
         color: #1f273b;
-        @media (max-width:576px) {
+        @media (max-width: 576px) {
           font-size: 112px;
         }
       }
     }
+
     .accordion-item {
       background-color: transparent;
       border: none;
       color: white;
       max-width: 745px;
       width: 110%;
-      margin:0 auto;
+      margin: 0 auto;
+      .accordion-collapse.collapsing {
+        background-color: #1f273b;
+      }
       @media (max-width: 992px) {
         width: 100%;
       }
-    }
-    .accordion-flush .accordion-collapse {
-      margin-bottom: 10px;
+      & .collapsing {
+        padding-top: 10px;
+        margin-top: -10px;
+        border-radius: 0 0 10px 10px;
+      }
     }
     .accordion-body {
       padding: 0 90px 20px 90px;
-      background-color: #131823;
+      background-color: #1f273b;
       border-radius: 0 0 10px 10px;
       @media (max-width: 825px) {
         padding: 0 50px 0 70px;
@@ -146,10 +152,9 @@
         box-shadow: none;
       }
       &:hover {
-        background-color: #131823;
-      
+        background-color: #1f273b;
       }
-      @media (max-width: 825px) {  
+      @media (max-width: 825px) {
         padding-left: 0;
         padding-right: 0;
       }
@@ -173,20 +178,15 @@
         background-repeat: no-repeat;
       }
       &:not(.collapsed) {
-        border-radius: 10px 10px 0 0;
         box-shadow: none;
-        background-color: #131823;
-        margin-top: 10px;
-        transition: 0.35s;
+        background-color: #1f273b;
+        border-radius: 10px 10px 0 0;
         .faq-question {
-          transition: 0.2s;
           background-image: url(../../images/icons/faq-question-alt.svg);
         }
       }
       .faq-question {
         margin-right: 28px;
-        
-
       }
       .faq-title {
         margin-right: 5px;
